styling to prevent overflow

--- a/src/app/components/data-browser/data-browser.component.scss
+++ b/src/app/components/data-browser/data-browser.component.scss
@@ -1,12 +1,17 @@
 :host {
-
+  max-height: 10em;
   .tapis-file-name {
     color: #9d85ef;
   }
 
   .systems-list {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 220px);
     border-right: 1px solid #d3d3d3;
+  }
+
+  .file-listing-table {
+    height: calc(100vh - 220px);
+    overflow-y: scroll;
   }
 
 }
